--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,6 +32,9 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="textcardColor">#3f3f3f</color>
     <color name="cardColor">#ffffff</color>
+    <color name="textColorPrimary">#000000</color>
+    <color name="textInputOutlineColor">#FFEE58</color>
+
 
 
 </resources>
