--- a/app/src/main/res/layout/activity_sign_in_screen.xml
+++ b/app/src/main/res/layout/activity_sign_in_screen.xml
@@ -109,7 +109,7 @@
         android:layout_marginStart="236dp"
         android:layout_marginTop="28dp"
         android:fontFamily="@font/montserrat_semibold"
-        android:onClick="form"
+        android:onClick="dashboard"
         android:text="Sign in"
         android:textColor="@color/colorText"
         android:textSize="48px"
